# hello

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  hello.data.coco2yolo.rst  hello.data.rst  hello.experimental.albu.detection.rst  hello.experimental.albu.rst  hello.experimental.rst  hello.fiftyone.annotate.rst  hello.fiftyone.brain.rst  hello.fiftyone.coco.rst  hello.fiftyone.coco_utils.rst  hello.fiftyone.connected.rst  hello.fiftyone.copypaste.rst  hello.fiftyone.core.rst  hello.fiftyone.dataset.rst  hello.fiftyone.dataset_annotate.rst  hello.fiftyone.dataset_detections.rst  hello.fiftyone.dataset_segmentations.rst  hello.fiftyone.dataset_yolov5.rst  hello.fiftyone.dataset_zoo.rst  hello.fiftyone.evaluate.rst  hello.fiftyone.evaluate_detections.rst  hello.fiftyone.evaluate_segmentations.rst  hello.fiftyone.gen_examples.rst  hello.fiftyone.mask_ignore.rst  hello.fiftyone.miou.rst  hello.fiftyone.patches.rst  hello.fiftyone.rst  hello.fiftyone.tarinfo.rst  hello.fiftyone.unique.rst  hello.fiftyone.utils.rst  hello.fiftyone.video.rst  hello.fiftyone.view.rst  hello.fvcore.core.rst  hello.fvcore.rst  hello.io.image.rst  hello.io.rst  hello.io.utils.rst  hello.mmdet.export.rst  hello.mmdet.flop.rst  hello.mmdet.infer.rst  (+44 more)
hello/: README.md  __init__.py  __main__.py
hello/data/: __init__.py  __main__.py  coco2yolo.py
hello/fiftyone/: __init__.py  __main__.py  annotate.py  app_detections.py  brain.py  coco.py  coco_utils.py  connected.py  core.py  dataset.py  dataset_annotate.py  dataset_detections.py  dataset_segmentations.py  dataset_yolov5.py  dataset_zoo.py  evaluate.py  evaluate_detections.py  evaluate_segmentations.py  examples.py  extract_clip.py  gen_examples.py  mask_ignore.py  miou.py  patches.py  tarinfo.py  unique.py  utils.py  video.py  view.py
hello/fvcore/: README.md  core.py
hello_c/: CMakeLists.txt  README.md  main.cpp  trace_model.py
(+66 files in other folders)
